# haracho-rust

./: Cargo.toml  uml.pu
src/: framework.rs  main.rs  services.rs
src/client/discord/: client.rs  mod.rs  serenity_handler.rs  structs.rs
src/clients/discord/: client.rs  mod.rs  serenity_handler.rs  structs.rs
src/command/: custom_command.rs  mod.rs  ping.rs
src/framework/: bot.rs  invoke.rs  launch_arg.rs  launch_type.rs  mod.rs  service.rs  service_info.rs  traits.rs
src/services/: argtest.rs  ping.rs
