[package]
name = "haracho-rust"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
serenity = { version = "*", default-features = true }
log = "0.4.8"
regex = "1.3.7"
getset = "0.1.1"
