[package]
name = "haracho-rust"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
log = "0.4.8"
simple_logger = "1.6.0"
